[WIP] shieldtablet: add tn8 support

--- a/arch/arm/mach-tegra/tegra124/Kconfig
+++ b/arch/arm/mach-tegra/tegra124/Kconfig
@@ -47,6 +47,13 @@ config TARGET_NYAN_BIG
 	  PMIC. The retail name is the Acer Chromebook 13 CB5-311-T7NN
 	  (13.3-inch HD, NVIDIA Tegra K1, 2GB).
 
+config TARGET_SHIELDTABLET
+	bool "NVIDIA Shield Tablet"
+	select ARCH_SUPPORT_PSCI
+	select BOARD_LATE_INIT
+	select CPU_V7_HAS_NONSEC
+	select CPU_V7_HAS_VIRT
+
 config TARGET_VENICE2
 	bool "NVIDIA Tegra124 Venice2"
 	select BOARD_LATE_INIT
@@ -60,6 +67,7 @@ source "board/cei/cei-tk1-som/Kconfig"
 source "board/nvidia/ardbeg/Kconfig"
 source "board/nvidia/jetson-tk1/Kconfig"
 source "board/nvidia/nyan-big/Kconfig"
+source "board/nvidia/shieldtablet/Kconfig"
 source "board/nvidia/venice2/Kconfig"
 source "board/toradex/apalis-tk1/Kconfig"
 
